# caponata

./: Cargo.toml  README.md
crates/button/: Cargo.toml
crates/button/examples/: demo.rs
crates/button/src/: button.rs  button_event.rs  button_status.rs  button_style.rs  button_thickness.rs  lib.rs
crates/button/src/button_line/: button_line.rs  loading_line.rs  mod.rs  plain_line.rs
crates/button/src/sized_button/: mod.rs  sized_button.rs  thick_button.rs  thin_button.rs
crates/button/src/styled_button/: mod.rs  styled_button.rs  thick_button.rs  thin_button.rs
crates/common/: Cargo.toml
crates/common/src/: callable.rs  callback.rs  lib.rs
crates/small-spinner/: Cargo.toml  README.md
crates/small-spinner/examples/: showcase.rs
crates/small-spinner/src/: lib.rs  spinner.rs  spinner_style.rs  spinner_type.rs  style.rs  symbol_cycle.rs  symbols.rs
crates/small-text/: Cargo.toml  README.md
crates/small-text/examples/: animation.rs  presets.rs  showcase.rs
crates/small-text/src/: lib.rs  style.rs  text.rs
crates/small-text/src/animation/: animated_text.rs  animation.rs  event.rs  mod.rs  style.rs  text.rs
crates/small-text/src/animation/advancable/: animation.rs  automatically.rs  manually.rs  mod.rs
crates/small-text/src/animation/presets/: mod.rs  scanner.rs  ticker.rs  wave.rs
crates/small-text/src/animation/repeatable/: animation.rs  finitely.rs  infinitely.rs  mod.rs
crates/small-text/src/animation/style/: action.rs  advance_mode.rs  animation.rs  mod.rs  repeat_mode.rs  step.rs  target.rs
crates/small-text/src/text/: event.rs  mod.rs  style.rs  text.rs
crates/small-text/src/text/style/: mod.rs  symbol.rs  target.rs  text.rs
src/: lib.rs
