[package]
name = "ratatui_button"
version = "0.1.0"

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
crossterm = "0.28.*"
ratatui = "0.29.*"
derivative = "2.2.*"
derive_builder = "0.20.*"
ratatui_small_spinner = { version = "0.1.0", path = "../small-spinner" }
