[package]
name = "ratatui_small_spinner"
version = "0.1.0"

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
ratatui = "0.29.*"
derive_builder = "0.20.*"
crossterm = { version = "0.29.*", optional = true }

[features]
default = []

# We use crossterm only for the 'showcase' example.
crossterm = ["dep:crossterm", "ratatui/crossterm"]

[[example]]
name = "showcase"
required-features = ["crossterm"]
