[package]
name = "ratatui_small_spinner"
version = "0.1.0"

license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
ratatui = "0.29.*"
derive_builder = "0.20.*"
strum_macros = { version = "0.27.*", optional = true }
strum = { version = "0.27.*", optional = true }
crossterm = { version = "0.29.*", optional = true }

[features]
all = ["strum", "examples"]
default = []
strum = ["dep:strum", "dep:strum_macros"]
examples = ["dep:crossterm", "strum", "ratatui/crossterm"]

[[example]]
name = "showcase"
required-features = ["examples"]
